--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "jest --watchAll",
     "start": "npm run build-client & node index.js",
-    "dev": "npm run dev-client & npm run start-redis && cross-env ENV='development' nodemon index.js",
+    "dev": "npm run dev-client & npm run start-redis",
+    "dev-c": "cross-env ENV='development' nodemon index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' ENV='development' nodemon index.js",
     "start-redis": "redis-server --daemonize yes",
-    "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
-    "dev-client": "npm run clean && parcel client/src/index.html --out-dir client/dist",
-    "clean": "rm -rf .cache client/dist"
+    "build-client": "parcel build client/src/index.html --out-dir client/dist",
+    "dev-client": "parcel client/src/index.html --out-dir client/dist",
+    "clean": "rimraf .cache client/dist"
   },
   "jest": {
     "testEnvironment": "node"
@@ -20,9 +21,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.4"
+    "mkdirp": "^1.0.4",
+    "nodemon": "^1.18.4",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "babel-core": "^6.26.3",
@@ -35,7 +38,7 @@
     "express": "^4.16.3",
     "hex-to-binary": "^1.0.1",
     "history": "^4.7.2",
-    "parcel-bundler": "^1.10.3",
+    "parcel-bundler": "^1.12.5",
     "pubnub": "^4.21.6",
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
